<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/entry_content_padding_horizontal">

        <TextView
        style="@style/TextAppearance.CoParent.Form.HeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legal_acceptance_title" />

        <TextView
            style="@style/TextAppearance.CoParent.Form.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/legal_acceptance_message" />

        <TextView
            android:id="@+id/tvTermsLink"
            style="@style/TextAppearance.CoParent.Form.Helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/register_read_terms"
            android:textColor="@color/primary_blue"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvPrivacyLink"
            style="@style/TextAppearance.CoParent.Form.Helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:text="@string/register_read_privacy"
            android:textColor="@color/primary_blue"
            android:clickable="true"
            android:focusable="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbLegalAcceptance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/register_legal_acceptance"
            android:textColor="@color/gray_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAcceptLegal"
            style="@style/Widget.CoParent.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/legal_acceptance_continue" />
    </LinearLayout>
</ScrollView>
